--- a/src/components/ButtonList.scss
+++ b/src/components/ButtonList.scss
@@ -1,10 +1,12 @@
 @import "../styles/variables.scss";
 
 .grid-container {
+  width: 90vw;
   margin: 4rem;
 }
 .btn-grid {
   display: grid;
+  justify-content: center;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto auto;
 }
