--- a/src/components/ButtonList.scss
+++ b/src/components/ButtonList.scss
@@ -2,11 +2,27 @@
 
 .grid-container {
   width: 90vw;
-  margin: 4rem;
+  margin: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .btn-grid {
   display: grid;
   justify-content: center;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto auto;
+  row-gap: 30px;
+  column-gap: 30px;
+}
+
+@media screen and (max-width: 400px) {
+}
+
+@media screen and (min-width: 700px) {
+  .btn-grid {
+    grid-template-columns: 175px 175px 175px;
+    grid-template-rows: auto;
+    column-gap: 30px;
+    row-gap: 30px;
+  }
 }
