--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,17 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+
+  p {
+    margin-top: 5rem;
+    font-size: 1rem;
+    text-align: center;
+    color: $playing;
+
+    a {
+      color: $playing;
+    }
+  }
 }
 
 h1 {
