--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,300;0,400;1,200;1,300&display=swap");
 
 $dark1: #156064ff;
 $dark2: #713e5aff;
-$light1: #f8e16cff;
+$light1: rgb(244, 223, 117);
 $playing: #42e2b8ff;
 $paused: #fb8f67ff;
 
 $font1: "Architects Daughter", sans-serif;
+$font2: "Major Mono Display", monospace;
+$font3: "monospace";
