--- a/src/components/ButtonList.scss
+++ b/src/components/ButtonList.scss
@@ -15,14 +15,49 @@
   column-gap: 30px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 801px) {
+  .btn-grid {
+    grid-template-columns: 175px 175px 175px 175px;
+    grid-template-rows: auto;
+    column-gap: 50px;
+    row-gap: 30px;
+  }
+
+  .grid-container {
+    padding: 20px;
+    margin: auto;
+  }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) and (max-width: 800px) {
   .btn-grid {
     grid-template-columns: 175px 175px 175px;
     grid-template-rows: auto;
-    column-gap: 30px;
+    column-gap: 40px;
+    row-gap: 60px;
+  }
+
+  .grid-container {
+    padding: 20px;
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 699px) {
+  .btn {
+    font-size: 0.5rem;
+    width: 100%;
+    max-width: 200px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .btn {
+    font-size: 0.8rem;
+    width: 100%;
+    max-width: 200px;
+  }
+  .btn-grid {
+    column-gap: 15px;
     row-gap: 30px;
   }
 }
