fixed responsive design

--- a/src/components/ButtonList.scss
+++ b/src/components/ButtonList.scss
@@ -34,7 +34,7 @@
     grid-template-columns: 175px 175px 175px;
     grid-template-rows: auto;
     column-gap: 40px;
-    row-gap: 60px;
+    row-gap: 20px;
   }
 
   .grid-container {
@@ -44,20 +44,14 @@
 }
 
 @media screen and (min-width: 321px) and (max-width: 699px) {
-  .btn {
-    font-size: 0.5rem;
-    width: 100%;
-    max-width: 200px;
+  .btn-grid {
+    column-gap: 25px;
+    row-gap: 15px;
   }
 }
 @media screen and (max-width: 320px) {
-  .btn {
-    font-size: 0.8rem;
-    width: 100%;
-    max-width: 200px;
-  }
   .btn-grid {
-    column-gap: 15px;
-    row-gap: 30px;
+    column-gap: 25px;
+    row-gap: 15px;
   }
 }
