--- a/src/App.scss
+++ b/src/App.scss
@@ -16,8 +16,8 @@ body {
 
 p {
   font-family: $font1;
-  margin: 1rem auto;
-  margin-bottom: 2rem;
+  margin: 2rem auto;
+  // margin-bottom: 2rem;
   font-size: 1rem;
   text-align: center;
   color: $dark1;
@@ -69,6 +69,7 @@ h1 {
     font-size: 1.2rem;
   }
   p {
-    font-size: 0.8rem;
+    padding-top: 10px;
+    font-size: 0.6rem;
   }
 }
