--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,300;0,400;1,200;1,300&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,300;0,400;1,200;1,300&display=swap");
 
 $dark1: #156064ff;
 $dark2: #713e5aff;
