updated responsive footer for mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,12 +83,14 @@ h1 {
     font-size: 1rem;
   }
 
-  .coffeeLink p {
-    font-size: 0.6rem;
-  }
+  .footer {
+    .coffeeLink p {
+      font-size: 1rem;
+    }
 
-  .copyright p {
-    font-size: 0.4rem;
+    .copyright {
+      font-size: 0.4rem;
+    }
   }
 }
 
@@ -97,11 +99,13 @@ h1 {
     font-size: 1.2rem;
   }
 
-  .coffeeLink p {
-    font-size: 1rem;
-  }
+  .footer {
+    .coffeeLink p {
+      font-size: 1rem;
+    }
 
-  .copyright p {
-    font-size: 0.5rem;
+    .copyright {
+      font-size: 0.4rem;
+    }
   }
 }
