--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,10 +3,13 @@
 
 $dark1: #156064ff;
 $dark2: #713e5aff;
-$light1: rgb(244, 223, 117);
-$playing: #42e2b8ff;
+$light1: rgb(241, 224, 138);
+$playing: rgb(126, 229, 217);
 $paused: #fb8f67ff;
 
-$font1: "Architects Daughter", sans-serif;
+$font3: "Architects Daughter", sans-serif;
+// $font2: "Major Mono Display", monospace;
+// $font3: "monospace";
+$font1: "Karla", sans-serif;
 $font2: "Major Mono Display", monospace;
-$font3: "monospace";
+// $font3: "monospace";
