--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,13 +1,15 @@
 @import "../styles/variables.scss";
 
 .btn {
-  font-family: $font1;
+  font-family: $font3;
+  font-weight: 200;
   font-size: 2rem;
 
   padding: 10px;
   border-radius: 2rem;
   background-color: $light1;
-  border: 1px $dark2 solid;
+  border: 1px solid $dark2;
+  box-shadow: rgba(101, 77, 152, 0.175) 0px 7px 29px 0px;
 
   color: $dark2;
 
@@ -15,13 +17,13 @@
     background-color: $playing;
     &:hover {
       cursor: pointer;
-      box-shadow: 2px 5px 5px 2px darken($dark2, 5%);
+      box-shadow: 2px 3px 3px 2px $dark2;
     }
   }
 
   &:hover {
     cursor: pointer;
-    box-shadow: 2px 5px 5px 2px darken($dark2, 5%);
+    box-shadow: 2px 3px 3px 2px $dark2;
   }
 
   &:focus {
@@ -31,12 +33,21 @@
 
 @media screen and (min-width: 700px) {
   .btn {
-    font-size: 3rem;
+    font-size: 2rem;
+    height: 6rem;
     padding: 15px;
   }
 }
 
-@media screen and (min-width: 321px) and (max-width: 699px) {
+@media screen and (min-width: 475px) and (max-width: 699px) {
+  .btn {
+    font-size: 1.4rem;
+    height: 4rem;
+    width: 140px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 474px) {
   .btn {
     font-size: 1rem;
     width: 120px;
@@ -51,8 +62,8 @@
 
 @media screen and (min-width: 1101px) {
   .btn {
-    font-size: 3rem;
-
+    font-size: 2.5rem;
+    height: 6.5rem;
     width: 200px;
   }
 }
