--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,19 @@
 // @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
 // @import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,300;0,400;1,200;1,300&display=swap");
 
+// $dark1: #156064ff;
+// $dark2: #713e5aff;
+// $light1: rgba(250, 226, 104, 0.925);
+// $playing: #713e5aff;
+// $paused: #fb8f67ff;
 $dark1: #156064ff;
-$dark2: #713e5aff;
-$light1: rgb(241, 224, 138);
-$playing: rgb(126, 229, 217);
-$paused: #fb8f67ff;
+$dark2: #a7e2e3;
+$light1: #4c6663;
+$playing: #80cfa9;
+$paused: #d4c5e2;
+$background: #4c6663;
+$p-color: #d4c5e2;
 
 $font3: "Architects Daughter", sans-serif;
-// $font2: "Major Mono Display", monospace;
-// $font3: "monospace";
 $font1: "Karla", sans-serif;
 $font2: "Major Mono Display", monospace;
-// $font3: "monospace";
