--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,8 @@ html {
 body {
   font-family: $font2;
   box-sizing: border-box;
-  background-color: rgb(176, 209, 255);
+  background-color: $background;
+  background-image: url("https://www.transparenttextures.com/patterns/light-honeycomb-dark.png");
   margin: 0;
   width: 100vw;
   height: 100vh;
@@ -15,12 +16,13 @@ body {
 }
 
 p {
-  font-family: $font1;
+  font-family: "Poppins", sans-serif;
   margin: auto;
 
   font-size: 0.5rem;
   text-align: center;
   color: rgb(226, 226, 234);
+  text-shadow: 0.5px 1px 0px #564592;
 
   a {
     color: rgb(226, 226, 234);
@@ -36,6 +38,7 @@ h1 {
   text-align: center;
   margin: 2rem;
   margin-bottom: 2.8rem;
+  text-shadow: 0.5px 3px 0px #564592;
 }
 
 .footer {
@@ -59,11 +62,15 @@ h1 {
     p {
       font-size: 1rem;
 
-      color: rgb(17, 131, 74);
+      color: $dark2;
     }
   }
 
   a {
+    font-size: 1rem;
+
+    color: $dark2;
+    text-shadow: 0.8px 1.5px 0px #564592;
     text-decoration: none;
 
     &:hover {
@@ -72,12 +79,14 @@ h1 {
   }
 
   .copyright {
-    color: darken($dark2, 5%);
-
+    color: $dark2;
     font-size: 0.8rem;
+    text-shadow: 0.8px 1px 0px #564592;
 
     a {
-      color: darken($dark2, 5%);
+      font-size: 0.8rem;
+      text-shadow: 0.8px 1px 0px #564592;
+      color: $dark2;
     }
   }
 }
