--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,29 +1,35 @@
 @import "../styles/variables.scss";
 
 .btn {
-  font-family: $font3;
+  font-family: "Poppins", sans-serif;
+
   font-weight: 200;
-  font-size: 2rem;
+  font-size: 1.8rem;
 
   padding: 10px;
   border-radius: 2rem;
   background-color: $light1;
-  border: 1px solid $dark2;
-  box-shadow: rgba(101, 77, 152, 0.175) 0px 7px 29px 0px;
+  border: 2px solid $dark2;
+  box-shadow: rgba(0, 0, 128, 0.315) 3px 5px 7px 0px;
+  text-shadow: 0.5px 2px 0px #564592;
 
   color: $dark2;
 
   &--selected {
     background-color: $playing;
+    color: #564592;
+    border: 1px solid $light1;
+    text-shadow: 0.5px 1.5px 0px #564592;
     &:hover {
       cursor: pointer;
-      box-shadow: 2px 3px 3px 2px $dark2;
+      text-shadow: 0.5px 1.5px 0px #564592;
     }
   }
 
   &:hover {
     cursor: pointer;
-    box-shadow: 2px 3px 3px 2px $dark2;
+    box-shadow: 2px 3px 3px 0px #564592;
+    transform: scale(1.05);
   }
 
   &:focus {
