--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,14 +6,13 @@
 // $light1: rgba(250, 226, 104, 0.925);
 // $playing: #713e5aff;
 // $paused: #fb8f67ff;
-$dark1: #156064ff;
+
 $dark2: #a7e2e3;
 $light1: #4c6663;
 $playing: #80cfa9;
-$paused: #d4c5e2;
 $background: #4c6663;
-$p-color: #d4c5e2;
+$shadow: #564592;
+$shadow2: #56459244;
 
-$font3: "Architects Daughter", sans-serif;
-$font1: "Karla", sans-serif;
+$font1: "Poppins", sans-serif;
 $font2: "Major Mono Display", monospace;
