--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ body {
   font-family: $font2;
   box-sizing: border-box;
   background-color: $background;
-  background-image: url("https://www.transparenttextures.com/patterns/light-honeycomb-dark.png");
+  background-image: url("https://www.transparenttextures.com/patterns/binding-dark.png");
   margin: 0;
   width: 100vw;
   height: 100vh;
@@ -16,13 +16,13 @@ body {
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: $font1;
   margin: auto;
 
   font-size: 0.5rem;
   text-align: center;
   color: rgb(226, 226, 234);
-  text-shadow: 0.5px 1px 0px #564592;
+  text-shadow: 0.5px 1px 0px $shadow;
 
   a {
     color: rgb(226, 226, 234);
@@ -38,7 +38,8 @@ h1 {
   text-align: center;
   margin: 2rem;
   margin-bottom: 2.8rem;
-  text-shadow: 0.5px 3px 0px #564592;
+  // text-shadow: 0.5px 3px 0px $shadow;
+  text-shadow: 1.5px 3px 0px $shadow;
 }
 
 .footer {
@@ -70,7 +71,7 @@ h1 {
     font-size: 1rem;
 
     color: $dark2;
-    text-shadow: 0.8px 1.5px 0px #564592;
+    text-shadow: 0.8px 1.5px 0px $shadow;
     text-decoration: none;
 
     &:hover {
@@ -81,13 +82,48 @@ h1 {
   .copyright {
     color: $dark2;
     font-size: 0.8rem;
-    text-shadow: 0.8px 1px 0px #564592;
+    text-shadow: 0.8px 1px 0px $shadow;
 
     a {
       font-size: 0.8rem;
-      text-shadow: 0.8px 1px 0px #564592;
+      text-shadow: 0.8px 1px 0px $shadow;
       color: $dark2;
     }
+  }
+}
+
+.music-note {
+  animation: musicNote 5s ease;
+  top: 0;
+  margin: 2rem;
+  position: absolute;
+  height: 10rem;
+  visibility: none;
+}
+
+@keyframes musicNote {
+  0% {
+    visibility: visible;
+    transform: translateY(-100rem);
+  }
+  20% {
+    visibility: visible;
+    transform: translateY(40rem);
+  }
+  60% {
+    visibility: visible;
+    transform: translateY(60rem);
+  }
+  80% {
+    visibility: visible;
+    transform: translateY(40rem);
+  }
+  90% {
+    transform: translateY(80rem);
+  }
+  100% {
+    transform: translateY(100rem);
+    visibility: none;
   }
 }
 
