--- a/src/App.scss
+++ b/src/App.scss
@@ -54,15 +54,15 @@ h1 {
   text-align: center;
   font-weight: 200;
   background-color: transparent;
-  z-index: 99;
+
   position: fixed;
   width: 100%;
   left: 0;
   bottom: 0;
-  padding: 0.6rem;
+  padding: 0.4rem;
   font-family: $font1;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
 
   .coffeeLink {
     padding-bottom: 0.2rem;
@@ -164,34 +164,40 @@ h1 {
 
 @media screen and (min-width: 321px) and (max-width: 699px) {
   h1 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-bottom: 2rem;
   }
 
   .footer {
-    .coffeeLink p {
+    .coffeeLink {
       font-size: 0.8rem;
     }
 
     .copyright {
       font-size: 0.6rem;
+      a {
+        font-size: 0.6rem;
+      }
     }
   }
 }
 
 @media screen and (max-width: 320px) {
   h1 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-bottom: 2rem;
   }
 
   .footer {
-    .coffeeLink p {
-      font-size: 0.8rem;
+    .coffeeLink {
+      font-size: 0.7rem;
     }
 
     .copyright {
       font-size: 0.5rem;
+      a {
+        font-size: 0.5rem;
+      }
     }
   }
 }
