--- a/src/components/ButtonList.scss
+++ b/src/components/ButtonList.scss
@@ -1,10 +1,10 @@
 @import "../styles/variables.scss";
 
 .grid-container {
+  display: flex;
+  justify-content: center;
   width: 90vw;
-  margin: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin: 2rem auto;
 }
 .btn-grid {
   display: grid;
