--- a/src/App.scss
+++ b/src/App.scss
@@ -131,6 +131,14 @@ h1 {
   }
 }
 
+@media screen and (min-width: 321px) and (max-width: 500px) {
+  h1 {
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
 @media screen and (max-width: 320px) {
   h1 {
     font-size: 0.8rem;
